added a new terrain _off for all tiles off map,
...this allows special offmap 
transitions which should allow them to look better.

--- a/data/terrain.cfg
+++ b/data/terrain.cfg
@@ -17,6 +17,13 @@
 
 [terrain]
 symbol_image=void
+id=off_map
+name= _ "None"
+string=_off
+[/terrain]
+
+[terrain]
+symbol_image=void
 id=shroud
 name= _ "Shroud"
 char=" "
