Added a patch for eleazar, it addes a new transition to the off map terrain

--- a/data/terrain-graphics.cfg
+++ b/data/terrain-graphics.cfg
@@ -822,6 +822,11 @@
 {DISABLE_TRANSITIONS Xu}
 {DISABLE_TRANSITIONS (Cud,Kud)}
 
+
+# Outside-game-world transitions
+{TERRAIN_ADJACENT_CORNER_BOTH  _off             (A*,B*,C*,D*,F*,G*,H*,K*,M*,Q*,R*,S*,U*,V*,W*,X*)              outside/wood}
+
+
 {TERRAIN_ADJACENT_CORNER_BOTH  Xu               (!,Xu,Cud,Kud,_K,Qxu,Ql)               cave/wall-rough}
 {TERRAIN_ADJACENT_CORNER       Xu               (!,Xu,Cud,Kud,_K,Qxu,Ql)  (Qxu,Ql)     54,68 cave/wall-rough-convex}
 {TERRAIN_ADJACENT_CORNER       Xu               (Qxu,Ql)    (!,Xu,Cud,Kud,_K,Qxu,Ql)   54,68 cave/wall-rough-convex}
@@ -971,4 +976,4 @@
 {TERRAIN_ADJACENT          -560    Chw              (!,Chw,Chr)                          water/coast}
 {TERRAIN_ADJACENT          -570    (!,Chr,Chw)      Chr                                  flat/grass}
 
-{TERRAIN_BASE_DEFAULT void}
+{TERRAIN_BASE_DEFAULT outside/wood1}
