--- a/data/terrain.cfg
+++ b/data/terrain.cfg
@@ -16,7 +16,7 @@
 #str=  Bww/ Bww| Bww\ Xu   _s   _f   Fet  Uh   Uf   Uui
 
 [terrain]
-symbol_image=void
+symbol_image=outside/wood1
 id=off_map
 name= _ "None"
 string=_off
