CB projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -247,6 +247,8 @@
 		<Unit filename="..\..\src\formula_function.hpp" />
 		<Unit filename="..\..\src\formula_string_utils.cpp" />
 		<Unit filename="..\..\src\formula_string_utils.hpp" />
+		<Unit filename="..\..\src\formula_string_utils_backend.cpp" />
+		<Unit filename="..\..\src\formula_string_utils_backend.hpp" />
 		<Unit filename="..\..\src\formula_tokenizer.cpp" />
 		<Unit filename="..\..\src\formula_tokenizer.hpp" />
 		<Unit filename="..\..\src\game.cpp">
@@ -795,6 +797,8 @@
 		<Unit filename="..\..\src\time_of_day.hpp" />
 		<Unit filename="..\..\src\tod_manager.cpp" />
 		<Unit filename="..\..\src\tod_manager.hpp" />
+		<Unit filename="..\..\src\token.cpp" />
+		<Unit filename="..\..\src\token.hpp" />
 		<Unit filename="..\..\src\tools\schema\tag.cpp" />
 		<Unit filename="..\..\src\tools\schema\tag.hpp" />
 		<Unit filename="..\..\src\tooltips.cpp" />
@@ -818,6 +822,10 @@
 		<Unit filename="..\..\src\unit_types.hpp" />
 		<Unit filename="..\..\src\util.cpp" />
 		<Unit filename="..\..\src\util.hpp" />
+		<Unit filename="..\..\src\utils\count_logger.hpp" />
+		<Unit filename="..\..\src\utils\interned.cpp" />
+		<Unit filename="..\..\src\utils\interned.hpp" />
+		<Unit filename="..\..\src\utils\lru_cache.hpp" />
 		<Unit filename="..\..\src\utils\reference_counter.hpp" />
 		<Unit filename="..\..\src\variable.cpp" />
 		<Unit filename="..\..\src\variable.hpp" />
