--- a/projectfiles/VC10/wesnoth.vcxproj.filters
+++ b/projectfiles/VC10/wesnoth.vcxproj.filters
@@ -83,6 +83,9 @@
     <Filter Include="tools\schema">
       <UniqueIdentifier>{24fa9dff-1e37-435e-9c30-50571ff65b5e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="utils">
+      <UniqueIdentifier>{1c6b6530-2d8a-47a2-b3f2-ab9d2f84d0a8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\..\packaging\windows\wesnoth.rc">
@@ -903,6 +906,11 @@
     </ClCompile>
     <ClCompile Include="..\..\src\gui\dialogs\folder_create.cpp">
       <Filter>Gui\Dialogs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\formula_string_utils_backend.cpp" />
+    <ClCompile Include="..\..\src\token.cpp" />
+    <ClCompile Include="..\..\src\utils\interned.cpp">
+      <Filter>utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1758,6 +1766,20 @@
     </ClInclude>
     <ClInclude Include="..\..\src\gui\dialogs\folder_create.hpp">
       <Filter>Gui\Dialogs</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\formula_string_utils_backend.hpp" />
+    <ClInclude Include="..\..\src\token.hpp" />
+    <ClInclude Include="..\..\src\utils\reference_counter.hpp">
+      <Filter>utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\utils\count_logger.hpp">
+      <Filter>utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\utils\interned.hpp">
+      <Filter>utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\utils\lru_cache.hpp">
+      <Filter>utils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
