update MSVC9 solution

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -7730,6 +7730,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\src\formula_string_utils_backend.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\src\formula_string_utils_backend.hpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\src\formula_tokenizer.cpp"
 			>
 		</File>
