--- a/projectfiles/VC9/wesnothlib.vcproj
+++ b/projectfiles/VC9/wesnothlib.vcproj
@@ -213,6 +213,26 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="utils"
+			>
+			<File
+				RelativePath="..\..\src\utils\count_logger.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\utils\interned.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\utils\interned.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\utils\lru_cache.hpp"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\src\about.hpp"
 			>
@@ -299,6 +319,14 @@
 		</File>
 		<File
 			RelativePath="..\..\src\thread.hpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\src\token.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\src\token.hpp"
 			>
 		</File>
 		<File
