add exceptions.cpp to VC9 projectfile

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="wesnoth"
 	ProjectGUID="{65ACA13F-5F5C-4768-A89A-ECF6C16F1512}"
 	RootNamespace="wesnoth"
@@ -7643,6 +7643,10 @@
 		</File>
 		<File
 			RelativePath="..\..\src\events.hpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\src\exceptions.cpp"
 			>
 		</File>
 		<File
