--- a/projectfiles/VC10/wesnoth.vcxproj.filters
+++ b/projectfiles/VC10/wesnoth.vcxproj.filters
@@ -912,6 +912,7 @@
     <ClCompile Include="..\..\src\utils\interned.cpp">
       <Filter>utils</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\exceptions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\addon\manager.hpp">
