add exceptions.cpp to CB projectfile

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -225,6 +225,7 @@
 		<Unit filename="..\..\src\editor\mouse_action.hpp" />
 		<Unit filename="..\..\src\events.cpp" />
 		<Unit filename="..\..\src\events.hpp" />
+		<Unit filename="..\..\src\exceptions.cpp" />
 		<Unit filename="..\..\src\filechooser.cpp" />
 		<Unit filename="..\..\src\filechooser.hpp" />
 		<Unit filename="..\..\src\filesystem.cpp" />
