vc9 projectfile update

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -8446,6 +8446,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\src\team_builder.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\src\team_builder.hpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\src\terrain.cpp"
 			>
 		</File>
