CB projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -782,6 +782,8 @@
 		<Unit filename="..\..\src\stub.hpp" />
 		<Unit filename="..\..\src\team.cpp" />
 		<Unit filename="..\..\src\team.hpp" />
+		<Unit filename="..\..\src\team_builder.cpp" />
+		<Unit filename="..\..\src\team_builder.hpp" />
 		<Unit filename="..\..\src\terrain.cpp" />
 		<Unit filename="..\..\src\terrain.hpp" />
 		<Unit filename="..\..\src\terrain_filter.cpp" />
