visual studio projectfile update

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -289,6 +289,10 @@
 			Name="Addon"
 			>
 			<File
+				RelativePath="..\..\src\addon\info.hpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\addon\manager.cpp"
 				>
 				<FileConfiguration
