--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -82,6 +82,7 @@
 		<Unit filename="..\..\src\about.hpp" />
 		<Unit filename="..\..\src\actions.cpp" />
 		<Unit filename="..\..\src\actions.hpp" />
+		<Unit filename="..\..\src\addon\info.hpp" />
 		<Unit filename="..\..\src\addon\manager.cpp" />
 		<Unit filename="..\..\src\addon\manager.hpp" />
 		<Unit filename="..\..\src\addon\validation.cpp" />
