CB projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -434,6 +434,8 @@
 		<Unit filename="..\..\src\gui\dialogs\editor_new_map.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\editor_resize_map.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\editor_resize_map.hpp" />
+		<Unit filename="..\..\src\gui\dialogs\editor_set_starting_position.cpp" />
+		<Unit filename="..\..\src\gui\dialogs\editor_set_starting_position.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\editor_settings.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\editor_settings.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\field-fwd.hpp" />
