CB projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -412,6 +412,8 @@
 		<Unit filename="..\..\src\gui\auxiliary\window_builder\vertical_scrollbar.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon\description.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon\description.hpp" />
+		<Unit filename="..\..\src\gui\dialogs\addon\uninstall_list.cpp" />
+		<Unit filename="..\..\src\gui\dialogs\addon\uninstall_list.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon_connect.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon_connect.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\addon_list.cpp" />
