disable MSVC warnings about unreferenced local functions...
...for gui/widgets/generator

(they're wrong according to mordante)

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -408,7 +408,6 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description=""
 				CommandLine=""
 			/>
 		</Configuration>
@@ -497,7 +496,6 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description=""
 				CommandLine=""
 			/>
 		</Configuration>
@@ -3798,6 +3796,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Gui\Widgets\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 					<FileConfiguration
@@ -3806,6 +3805,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Gui\Widgets\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 					<FileConfiguration
@@ -3814,6 +3814,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Gui\Widgets\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 					<FileConfiguration
@@ -3822,6 +3823,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Gui\Widgets\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 					<FileConfiguration
@@ -3830,6 +3832,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Gui\Widgets\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 					<FileConfiguration
@@ -3838,6 +3841,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Gui\Widgets\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 				</File>
