eclipse plugin: tweak the grammar...
...so each WMLKey will have just one line ending, not more

--- a/utils/umc_dev/org.wesnoth.ui/.settings/org.eclipse.jdt.core.prefs
+++ b/utils/umc_dev/org.wesnoth.ui/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Mon Aug 08 23:52:12 EEST 2011
+#Mon Jan 16 20:54:24 EET 2012
 eclipse.preferences.version=1
 org.eclipse.jdt.core.codeComplete.argumentPrefixes=
 org.eclipse.jdt.core.codeComplete.argumentSuffixes=
