CB projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -422,8 +422,8 @@
 		<Unit filename="..\..\src\gui\dialogs\campaign_difficulty.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\campaign_selection.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\campaign_selection.hpp" />
-		<Unit filename="../../src/gui/dialogs/chat_log.cpp" />
-		<Unit filename="../../src/gui/dialogs/chat_log.hpp" />
+		<Unit filename="..\..\src\gui\dialogs\chat_log.cpp" />
+		<Unit filename="..\..\src\gui\dialogs\chat_log.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\data_manage.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\data_manage.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\debug_clock.cpp" />
@@ -479,6 +479,8 @@
 		<Unit filename="..\..\src\gui\dialogs\mp_create_game.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_create_game_set_password.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_create_game_set_password.hpp" />
+		<Unit filename="..\..\src\gui\dialogs\mp_host_game_prompt.cpp" />
+		<Unit filename="..\..\src\gui\dialogs\mp_host_game_prompt.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_login.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_login.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_method_selection.cpp" />
